build_log_debug.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:extractDebugProto UP-TO-DATE
> Task :app:extractIncludeDebugProto UP-TO-DATE
> Task :app:extractProto UP-TO-DATE
> Task :app:generateDebugProto UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kspDebugKotlin UP-TO-DATE
> Task :app:compileDebugKotlin UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:compileDebugJavaWithJavac UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:hiltAggregateDepsDebug UP-TO-DATE

> Task :app:hiltJavaCompileDebug
D:\AndroidStudioProjects\MusicShelf\app\build\generated\hilt\component_sources\debug\com\example\musicshelf\MusicShelfApp_HiltComponents.java:146: error: [Dagger/DependencyCycle] Found a dependency cycle:
  public abstract static class SingletonC implements MusicShelfApp_GeneratedInjector,
                         ^
      com.example.musicshelf.data.remote.auth.SpotifyAuthManager is injected at
          com.example.musicshelf.data.remote.auth.SpotifyTokenInterceptor(…, spotifyAuthManager)
      com.example.musicshelf.data.remote.auth.SpotifyTokenInterceptor is injected at
          com.example.musicshelf.di.NetworkModule.provideOkHttpClient(spotifyTokenInterceptor)
      okhttp3.OkHttpClient is injected at
          com.example.musicshelf.di.NetworkModule.provideRetrofit(okHttpClient)
      retrofit2.Retrofit is injected at
          com.example.musicshelf.di.NetworkModule.provideSpotifyApiService(retrofit)
      com.example.musicshelf.data.remote.api.SpotifyApiService is injected at
          com.example.musicshelf.data.remote.auth.SpotifyAuthManager(spotifyApiService, …)
      com.example.musicshelf.data.remote.auth.SpotifyAuthManager is injected at
          com.example.musicshelf.data.remote.auth.SpotifyTokenInterceptor(…, spotifyAuthManager)
      ...
  
  The cycle is requested via:
      com.example.musicshelf.data.remote.auth.SpotifyAuthManager is injected at
          com.example.musicshelf.ui.auth.AuthViewModel(…, spotifyAuthManager)
      com.example.musicshelf.ui.auth.AuthViewModel is injected at
          com.example.musicshelf.ui.auth.AuthViewModel_HiltModules.BindsModule.binds(vm)
      @dagger.hilt.android.internal.lifecycle.HiltViewModelMap java.util.Map<java.lang.Class<?>,javax.inject.Provider<androidx.lifecycle.ViewModel>> is requested at
          dagger.hilt.android.internal.lifecycle.HiltViewModelFactory.ViewModelFactoriesEntryPoint.getHiltViewModelMap() [com.example.musicshelf.MusicShelfApp_HiltComponents.SingletonC → com.example.musicshelf.MusicShelfApp_HiltComponents.ActivityRetainedC → com.example.musicshelf.MusicShelfApp_HiltComponents.ViewModelC]
1 error

> Task :app:hiltJavaCompileDebug FAILED

[Incubating] Problems report is available at: file:///D:/AndroidStudioProjects/MusicShelf/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:hiltJavaCompileDebug'.
> Compilation failed; see the compiler output below.
  D:\AndroidStudioProjects\MusicShelf\app\build\generated\hilt\component_sources\debug\com\example\musicshelf\MusicShelfApp_HiltComponents.java:146: error: [Dagger/DependencyCycle] Found a dependency cycle:
    public abstract static class SingletonC implements MusicShelfApp_GeneratedInjector,
                           ^
        com.example.musicshelf.data.remote.auth.SpotifyAuthManager is injected at
            com.example.musicshelf.data.remote.auth.SpotifyTokenInterceptor(…, spotifyAuthManager)
        com.example.musicshelf.data.remote.auth.SpotifyTokenInterceptor is injected at
            com.example.musicshelf.di.NetworkModule.provideOkHttpClient(spotifyTokenInterceptor)
        okhttp3.OkHttpClient is injected at
            com.example.musicshelf.di.NetworkModule.provideRetrofit(okHttpClient)
        retrofit2.Retrofit is injected at
            com.example.musicshelf.di.NetworkModule.provideSpotifyApiService(retrofit)
        com.example.musicshelf.data.remote.api.SpotifyApiService is injected at
            com.example.musicshelf.data.remote.auth.SpotifyAuthManager(spotifyApiService, …)
        com.example.musicshelf.data.remote.auth.SpotifyAuthManager is injected at
            com.example.musicshelf.data.remote.auth.SpotifyTokenInterceptor(…, spotifyAuthManager)
        ...
    
    The cycle is requested via:
        com.example.musicshelf.data.remote.auth.SpotifyAuthManager is injected at
            com.example.musicshelf.ui.auth.AuthViewModel(…, spotifyAuthManager)
        com.example.musicshelf.ui.auth.AuthViewModel is injected at
            com.example.musicshelf.ui.auth.AuthViewModel_HiltModules.BindsModule.binds(vm)
        @dagger.hilt.android.internal.lifecycle.HiltViewModelMap java.util.Map<java.lang.Class<?>,javax.inject.Provider<androidx.lifecycle.ViewModel>> is requested at
            dagger.hilt.android.internal.lifecycle.HiltViewModelFactory.ViewModelFactoriesEntryPoint.getHiltViewModelMap() [com.example.musicshelf.MusicShelfApp_HiltComponents.SingletonC → com.example.musicshelf.MusicShelfApp_HiltComponents.ActivityRetainedC → com.example.musicshelf.MusicShelfApp_HiltComponents.ViewModelC]
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 6s
30 actionable tasks: 1 executed, 29 up-to-date
